objects/TaskRRassignment__c.object
<CustomObject>
    <fields>
        <fullName>CurrentAssignment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will show which user is currently assigned to the Task.</description>
        <label>CurrentAssignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <description>This will store the Id of User.</description>
        <label>User Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <description>This will store the name of the user.</description>
        <label>User Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <customSettingsType>List</customSettingsType>
    <description>This is used in the TaskAssignAutomationTrgHelper Class for assigning Task through Round Robin Technique</description>
    <label>TaskRRassignment</label>
</CustomObject>